--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Detectives -- United States'
 - !lcsh 'Detective and mystery stories'
 - !lcsh 'Robbery -- United States -- Case studies'
+- GITenberg
 title: The Burglar's Fate, and The Detectives
 url: http://www.gutenberg.org/ebooks/17762
